# allegro-engine

./: CMakeLists.txt  README.md  main.cpp  object.cpp  object.h  sprite.cpp  sprite.h  square_collider.h  vector2.cpp  vector2.h
docs/: README.md  _config.yml  about.md  index.html
docs/.sass-cache/a052dbeda7b89ced9c674d2ded9f57ce426932e3/: _base.scssc  _layout.scssc  _syntax-highlighting.scssc
docs/_classes/: audio_resource.md  camera.md  circle_collider.md  collider.md  collision.md  drawable.md  engine.md  exceptions.md  geometry.md  image_resource.md  input.md  matrix2x2.md  polygon_collider.md  rect_collider.md  text.md  transform.md  vector2.md
docs/_data-members/audio_resource/: loop.md  mixer.md  pan.md  sample.md  sampleInstance.md  sampleRate.md  speed.md  voice.md  volume.md
docs/_data-members/camera/: background.md  bitmap.md  guis.md  size.md
docs/_data-members/circle_collider/: radius.md  vertices.md
docs/_data-members/collider/: draw.md  fixed.md  solid.md
docs/_data-members/collision/: collided.md  mtv.md
docs/_data-members/engine/: camera.md  colliders.md  deltaTime.md  display.md  drawables.md  framerate.md  height.md  input.md  maxFrameRate.md  objects.md  running.md  width.md
docs/_data-members/image_resource/: bitmap.md
docs/_data-members/input/: event_queue.md  held.md  keyboard_source.md  mouseHeld.md  mousePressed.md  mouseReleased.md  numAxes.md  numButtons.md  pressed.md  released.md  stringKeyMap.md
docs/_data-members/matrix2x2/: array.md
docs/_data-members/object/: engine.md  name.md  parent.md
docs/_data-members/polygon_collider/: bitmap.md  original_vertices.md  vertices.md
docs/_data-members/rect_collider/: size.md  vertices.md
docs/_data-members/text/: bitmap.md  color.md  font.md  size.md  text.md
docs/_data-members/transform/: position.md  rotation.md  scale.md
docs/_layouts/: class.html
docs/_methods/audio_resource/: ctor.md  loop.md  pan.md  play.md  playFromPercentage.md  playFromSeconds.md  setLoop.md  setPan.md  setVolume.md  speed.md  volume.md
docs/_methods/camera/: attachGUI.md  background.md  bitmap.md  cameraToWorldSpace.md  clearBitmap.md  ctor.md  draw.md  drawGUI.md  (+3 more)
docs/_posts/: 2018-12-27-docs-completed.md
docs/_site/: feed.xml  index.html  keyPressed.md
docs/docs/: index.html
examples/cat_down/: CMakeLists.txt  main.cpp
examples/circles/: CMakeLists.txt  circle_spawner.cpp  circle_spawner.h  gravity.cpp  gravity.h  main.cpp
examples/engine_test/: CMakeLists.txt  README.md  main.cpp
examples/hello_world/: CMakeLists.txt  main.cpp
examples/intersections/: CMakeLists.txt  main.cpp
examples/platformer/: CMakeLists.txt  main.cpp
examples/polygon-test/: CMakeLists.txt  main.cpp  my_polygon.cpp  my_polygon.h  polygon.cpp  polygon.h  polygon_collider.cpp  polygon_collider.h
examples/pong/: CMakeLists.txt  ball_motion.cpp  ball_motion.h  horz_wall_collider.cpp  horz_wall_collider.h  main.cpp  p1_paddle.cpp  p1_paddle.h  p2_paddle.cpp  p2_paddle.h  paddle_collider.cpp  paddle_collider.h  vert_wall_collider.cpp  vert_wall_collider.h
examples/rotation-test/: CMakeLists.txt  main.cpp  mover.cpp  mover.h
examples/test/: .main.cpp.swp  CMakeLists.txt
src/: .engine.h.swp  .image_resource.cpp.swp  .rect_collider.h.swp  .transform.h.swp  .vector2.h.swp  CMakeLists.txt  animated_sprite.cpp  animated_sprite.h  animation_resource.cpp  animation_resource.h  audio_resource.cpp  audio_resource.h  camera.cpp  camera.h  circle_collider.cpp  circle_collider.h  collider.cpp  collider.h  collision.h  drawable.cpp  drawable.h  engine.cpp  engine.h  exceptions.cpp  exceptions.h  geometry.cpp  geometry.h  image_resource.cpp  image_resource.h  input.cpp  input.h  matrix2x2.cpp  matrix2x2.h  object.cpp  object.h  polygon_collider.cpp  polygon_collider.h  prefab.cpp  prefab.h  rect_collider.cpp  (+11 more)
tests/: CMakeLists.txt  tests.cpp
(+335 files in other folders)
